--- a/textutils/templates/index.html
+++ b/textutils/templates/index.html
@@ -1,21 +1,80 @@
-<!DOCTYPE html>
-<HTML>
-<HEAD>
-	<meta charset="utf-8">
-	<TITLE> Text Utils </TITLE>
-</HEAD>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<BODY>
-	<h1>Welcome to the text analyzer. Enter your text below
-	</h1>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-	<form action='/analyze' method='get'>
-		<textarea name='text' style='margin: 0px 266px 0px 0px; width: 1513px; height: 245px;'> </textarea>
-		<input type="checkbox" name="removepunc"> Remove Punctuation<br>
-		<button type='submit'>Analyze Text</button>
-	</form>
+    <title>Hello, world!</title>
+  </head>
+  <body>
+	    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <div class="container-fluid">
+	    <a class="navbar-brand" href="#">TextUtils</a>
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+	      <ul class="navbar-nav">
+	        <li class="nav-item">
+	          <a class="nav-link active" aria-current="page" href="#">Home</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">About Us</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">Contact Us</a>
+	        </li>
+	        
+	      </ul>
+	    </div>
+	  </div>
+
+	  <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+	</nav>
+
+   	<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Welcome to TextUtils, Edit your text here</strong> You should check in on some of those fields below.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 
 
-</BODY>
+	<div class="container">
+		<form action='/analyze' method='get'>
 
-</HTML>
+		<div class="mb-3">
+		  <label for="exampleFormControlTextarea1" class="form-label">Enter your text here</label>
+		  <textarea class="form-control" name="text" id="exampleFormControlTextarea1" rows="9"></textarea>
+		</div>
+
+		<div class="form-check form-switch">
+		  <input class="form-check-input" name="removepunc" type="checkbox" id="flexSwitchCheckDefault1">
+		  <label class="form-check-label" for="flexSwitchCheckDefault">Remove Punctuation</label>
+		</div>
+
+		<div class="form-check form-switch">
+		  <input class="form-check-input" name="fulcaps" type="checkbox" id="flexSwitchCheckDefault2">
+		  <label class="form-check-label" for="flexSwitchCheckDefault">Uppercase</label>
+		</div>
+
+		<button type="submit" class="btn btn-dark mt-2">Analyze Text</button>
+		</form>
+	</div>
+
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
